--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "aws-sdk": "^2.410.0",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "multiparty": "^4.2.1",
     "nodemon": "^1.18.9",
     "pg": "^7.8.1"
   }
